Bug fixes
Fixed bug causing walking sound to play after character death. Fixed bug resulting in blurry rendering

--- a/style.css
+++ b/style.css
@@ -20,3 +20,10 @@ footer {
   bottom: 0px;
   display: inline-block;
 }
+
+canvas {
+  image-rendering: crisp-edges;
+  image-rendering: -moz-crisp-edges;
+  image-rendering: -webkit-optimize-contrast;
+  -ms-interpolation-mode: nearest-neighbor;
+}
